--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,21 @@
 @import url("../vendor/normalize.css");
 @import url("../fonts/inter.css");
+@import url("../blocks/root/root.css");
+@import url("../blocks/header/header.css");
+@import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__avatar/profile__avatar.css");
+@import url("../blocks/profile/__text/profile__text.css");
+@import url("../blocks/profile/__name/profile__name.css");
+@import url("../blocks/profile/__description/profile__description.css");
+@import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__add-button/profile__add-button.css");
+@import url("../blocks/cards/cards.css");
+@import url("../blocks/card/card.css");
+@import url("../blocks/card/__photo/card__photo.css");
+@import url("../blocks/card/__info/card__info.css");
+@import url("../blocks/card/__title/card__title.css");
+@import url("../blocks/card/__like/card__like.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
