make popup and js done

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,10 +4,16 @@
   background-image: url("../../../images/add-button.svg");
   background-repeat: no-repeat;
   background-position: center;
+  outline-width: 0;
+}
+
+.popup__add-button:focus{
+  outline: none;
 }
 
 .profile__add-button:hover {
   opacity: 60%;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 300px) {
