--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,10 +4,16 @@
   background-image: url("../../../images/edit-button.svg");
   background-repeat: no-repeat;
   background-position: center;
+  outline-width: 0;
+}
+
+.profile__edit-button:focus{
+  outline: none;
 }
 
 .profile__edit-button:hover {
   opacity: 60%;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 300px) {
