--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,12 @@
 @import url("../blocks/card/__like/card__like.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__close-button/popup__close-button.css");
+@import url("../blocks/popup/__form/popup__form.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__name-field/popup__name-field.css");
+@import url("../blocks/popup/__description-field/popup__description-field.css");
+@import url("../blocks/popup/__submit/popup__submit.css");
