--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,7 @@
         padding-top: 28px;
         padding-left: 27px;
         height: 56px;
-        border-bottom: 1px solid #545454;
+        border-bottom: 1px solid rgba(54,54,54,0.7);
     }
 }
 
