--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,5 +1,13 @@
 .card__like {
   width: 20.76px;
   height: 18.13px;
-  margin-right: 18px;
+  background-image: url("../../../images/like-button.svg");
+  background-position: center;
+  border: none;
+}
+
+.card__like:hover {
+  opacity: 60%;
+  cursor: pointer;
+  transition: 0.2s ease;
 }
