--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,5 +1,6 @@
 .popup__close-button {
   background-color: transparent;
+  align-self: flex-end;
   border: none;
   padding: 0;
   background-image: url("../../../images/close-icon.svg");
@@ -15,21 +16,23 @@
 .popup__close-button:hover {
   opacity: 60%;
   cursor: pointer;
+  transition: 0.2s ease;
 }
 
 @media screen and (min-width: 300px) {
   .popup__close-button {
-    width: 26px;
-    height: 26px;
+    width: 36px;
+    height: 36px;
+    margin-bottom: 13px;
   }
 }
 
 @media screen and (min-width: 960px) {
   .popup__close-button {
-    width: 40.7px;
-    height: 40.7px;
-    margin-right: -10px;
-    margin-bottom: -8px;
+    width: 56px;
+    height: 56px;
+    margin-right: -15px;
+    margin-bottom: -10px;
   }
 }
 
