--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -15,6 +15,7 @@
 .popup__submit:hover {
   opacity: 80%;
   cursor: pointer;
+  transition: 0.2s ease;
 }
 
 @media screen and (min-width: 300px) {
@@ -23,6 +24,7 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-bottom: 25px;
   }
 }
 
@@ -32,5 +34,6 @@
     height: 50.15px;
     font-size: 18px;
     line-height: 22px;
+    margin-bottom: 37px;
   }
 }
