--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -14,6 +14,7 @@
 .profile__add-button:hover {
   opacity: 60%;
   cursor: pointer;
+  transition: 0.2s ease;
 }
 
 @media screen and (min-width: 300px) {
