--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -2,6 +2,7 @@
   color: white;
   font-style: normal;
   font-weight: 400;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: 300px) {
