--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -7,7 +7,7 @@
 @media screen and (min-width: 300px) {
   .profile__text {
     width: 220px;
-    margin: 14px auto;
+    margin: 10px auto 14px;
   }
 }
 
