--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,10 +1,20 @@
 .popup__input {
   border: none;
   border-bottom: 1px solid rgba(0,0,0,0.2);
+  margin-bottom: 30px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
+  outline-width: 0;
+}
+
+.popup__input:last-of-type {
+  margin-bottom: 0;
+}
+
+.popup__input:focus {
+  outline: none;
 }
 
 @media screen and (min-width: 300px) {
