--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -24,6 +24,7 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-top: 45px;
     margin-bottom: 25px;
   }
 }
@@ -34,6 +35,7 @@
     height: 50.15px;
     font-size: 18px;
     line-height: 22px;
+    margin-top: 48px;
     margin-bottom: 37px;
   }
 }
