add photos with js, add like, delete option and photo zoom

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -5,6 +5,10 @@
   text-overflow: ellipsis;
 }
 
+.profile__description:hover {
+  cursor: default;
+}
+
 @media screen and (min-width: 300px) {
   .profile__description {
     font-size: 14px;
