--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -5,6 +5,12 @@
   background-position: center;
   background-color: transparent;
   border: none;
+  outline-width: 0;
+}
+
+
+.card__like:focus {
+  outline: none;
 }
 
 .card__like:hover {
