--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,6 +6,10 @@
   margin-bottom: 0;
 }
 
+.footer__copyright:hover {
+  cursor: default;
+}
+
 @media screen and (min-width: 300px) {
   .footer__copyright {
     padding-bottom: 36px;
