--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,8 @@
 .popup__title {
   font-style: normal;
   font-weight: 900;
+  text-align: left;
+  align-self: flex-start;
 }
 
 @media screen and (min-width: 300px) {
@@ -10,7 +12,7 @@
     line-height: 22px;
     margin-top: 25px;
     margin-bottom: 75px;
-    text-align: center;
+    margin-left: 25px;
   }
 }
 
@@ -21,6 +23,6 @@
     line-height: 29px;
     margin-top: 34px;
     margin-bottom: 54px;
-    text-align: left;
+    margin-left: 35px;
   }
 }
