--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,6 +7,10 @@
   text-overflow: ellipsis;
 }
 
+.profile__name:hover {
+  cursor: default;
+}
+
 @media screen and (min-width: 300px) {
   .profile__name {
     font-size: 27px;
