--- a/pages/index.css
+++ b/pages/index.css
@@ -14,16 +14,28 @@
 @import url("../blocks/cards/cards.css");
 @import url("../blocks/card/card.css");
 @import url("../blocks/card/__photo/card__photo.css");
+@import url("../blocks/card/__trash/card__trash.css");
 @import url("../blocks/card/__info/card__info.css");
 @import url("../blocks/card/__title/card__title.css");
 @import url("../blocks/card/__like/card__like.css");
+@import url("../blocks/card/__like/_active/card__like_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/_edit/popup_edit.css");
+@import url("../blocks/popup/_add/popup_add.css");
+@import url("../blocks/popup/_scale-photo/popup_scale-photo.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__container/_add/popup__container_add.css");
 @import url("../blocks/popup/__close-button/popup__close-button.css");
+@import url("../blocks/popup/__close-button/_add-popup/popup__close-button_add-popup.css");
+@import url("../blocks/popup/__close-button/_photo/popup__close-button_photo.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__title/_add/popup__title_add.css");
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__submit/popup__submit.css");
+@import url("../blocks/popup/__submit/_add/popup__submit_add.css");
+@import url("../blocks/popup/__photo-container/popup__photo-container.css");
+@import url("../blocks/popup/__photo/popup__photo.css");
