--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -4,6 +4,7 @@
   background-image: url("../../../images/like-button.svg");
   background-position: center;
   background-color: transparent;
+  background-repeat: no-repeat;
   border: none;
   outline-width: 0;
 }
