--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,4 @@
-@import url("../../vendor/normalize.css");
+@import url("../vendor/normalize.css");
 @import url("../fonts/inter.css");
 @import url("../blocks/root/root.css");
 @import url("../blocks/header/header.css");
