make layout of delete confirmation popup and hover of avatar

--- a/src/blocks/card/__like/card__like.css
+++ b/src/blocks/card/__like/card__like.css
@@ -15,7 +15,7 @@
 }
 
 .card__like:hover {
-  opacity: 60%;
+  opacity: .6;
   cursor: pointer;
-  transition: 0.2s ease;
+  transition: opacity 0.2s ease;
 }
