--- a/src/blocks/popup/__submit/popup__submit.css
+++ b/src/blocks/popup/__submit/popup__submit.css
@@ -6,6 +6,7 @@
   font-weight: normal;
   border-radius: 2px;
   outline-width: 0;
+  padding: 0;
 }
 
 .profile__submit:focus {
@@ -13,9 +14,9 @@
 }
 
 .popup__submit:hover {
-  opacity: 80%;
+  opacity: .8;
   cursor: pointer;
-  transition: 0.2s ease;
+  transition: opacity 0.2s ease;
 }
 
 @media screen and (min-width: 300px) {
@@ -31,7 +32,7 @@
 @media screen and (min-width: 960px) {
   .popup__submit {
     width: 358px;
-    height: 50.15px;
+    height: 50px;
     font-size: 18px;
     line-height: 22px;
     margin-top: 18px;
