--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -12,9 +12,9 @@
 }
 
 .profile__add-button:hover {
-  opacity: 60%;
+  opacity: .6;
   cursor: pointer;
-  transition: 0.2s ease;
+  transition: opacity 0.2s ease;
 }
 
 @media screen and (min-width: 300px) {
