--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,10 +2,5 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-}
-
-@media screen and (min-width: 960px) {
-  .profile__avatar {
-   margin-right: 30px;
-  }
+  position: relative;
 }
