--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,8 +12,8 @@
 }
 
 .profile__edit-button:hover {
-  opacity: 60%;
-  transition: 0.2s ease;
+  opacity: .6;
+  transition: opacity 0.2s ease;
   cursor: pointer;
 }
 
