--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -19,7 +19,9 @@
 @import url("../blocks/card/__trash/card__trash.css");
 @import url("../blocks/card/__info/card__info.css");
 @import url("../blocks/card/__title/card__title.css");
+@import url("../blocks/card/__likes/card__likes.css");
 @import url("../blocks/card/__like/card__like.css");
+@import url("../blocks/card/__like-counter/card__like-counter.css");
 @import url("../blocks/card/__like/_active/card__like_active.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
