--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -43,7 +43,7 @@
 @import url("../blocks/popup/__error/popup__error.css");
 @import url("../blocks/popup/__error/_visible/popup__error_visible.css");
 @import url("../blocks/popup/__submit/popup__submit.css");
-@import url("../blocks/popup/__submit/_add/popup__submit_add.css");
+/*@import url("../blocks/popup/__submit/_add/popup__submit_add.css");*/
 @import url("../blocks/popup/__submit/_disabled/popup__submit_disabled.css");
 @import url("../blocks/popup/__photo-container/popup__photo-container.css");
 @import url("../blocks/popup/__photo/popup__photo.css");
